force-app/main/default/objects/CTRDocumentItem__c.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRRequestFormItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Item</label>
        <referenceTo>CTRRequestFormItem__c</referenceTo>
        <relationshipLabel>CTR Document Item</relationshipLabel>
        <relationshipName>CTR_Document_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentName__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalKey__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Not Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTR Document Item</label>
    <nameField>
        <label>CTR Document Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>